----------------------- 0.1.1 Changes -----------------------
### Additions
- Hoes now get exp when used
- Shovels now get exp when used to make paths

### Fixes
- Fixed Hoes not being able to hoe
- Fixed Shovel not being able to make paths

----------------------- 0.1.0 Changes -----------------------
### Additions
- Added the crystal axe
- Added the crystal hoe
    - Currently doesn't level up from tilling dirt, just breaking blocks
- Added the crystal shovel

### Fixes
- Fixed tools only having 10 durability (oops)
- Fixed skill tree Buttons getting stuck on the top of the screen when dragging
- Fixed skill descriptions not showing up when you hover over them

----------------------- 0.0.2 Changes -----------------------
- Tools can now be repaired at anvil with a crystal item
- Tools no longer break
- New textures!